@@ -164,9 +164,9 @@ class TestStore:
         r = env.nghttp().get(url, options=opt)
         assert r.exit_code == 0, r
         assert r.response
-        assert r.response["status"] == 200
+        assert r.response["status"] == 400
         url = env.mkurl("https", "cgi", "/proxy/hello.py")
         r = env.nghttp().get(url, options=opt)
         assert r.exit_code == 0, r
         assert r.response
-        assert r.response["status"] == 501
+        assert r.response["status"] == 400
